--- a/archives/toutiao-search/2023-11-18.md
+++ b/archives/toutiao-search/2023-11-18.md
@@ -1,63 +1,75 @@
 # 2023-11-18
 
-共 96 条
+共 103 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 18 2023 06:00:33 GMT+0800 (China Standard Time) -->
-1. [国足打进反超球时泰国场上只有10人](https://so.toutiao.com/search?keyword=国足打进反超球时泰国场上只有10人)
+<!-- 最后更新时间 Sat Nov 18 2023 07:00:43 GMT+0800 (China Standard Time) -->
+1. [大货车过磅正常女收费员称目测超重](https://so.toutiao.com/search?keyword=大货车过磅正常女收费员称目测超重)
 1. [台名嘴评拜登称赞红旗车并探头细看](https://so.toutiao.com/search?keyword=台名嘴评拜登称赞红旗车并探头细看)
 1. [谱写亚太合作新篇章](https://so.toutiao.com/search?keyword=谱写亚太合作新篇章)
 1. [18岁父亲有个4岁儿子 律师回应](https://so.toutiao.com/search?keyword=18岁父亲有个4岁儿子+律师回应)
 1. [外媒热议中美元首旧金山会晤](https://so.toutiao.com/search?keyword=外媒热议中美元首旧金山会晤)
-1. [冯德莱恩：将带着诚意访华](https://so.toutiao.com/search?keyword=冯德莱恩：将带着诚意访华)
-1. [美国撤出2万亿对印度经济有何影响](https://so.toutiao.com/search?keyword=美国撤出2万亿对印度经济有何影响)
-1. [贪官美容腐败有多疯狂](https://so.toutiao.com/search?keyword=贪官美容腐败有多疯狂)
 1. [外交部回应日希望中方取消水产禁令](https://so.toutiao.com/search?keyword=外交部回应日希望中方取消水产禁令)
+1. [美国撤出2万亿对印度经济有何影响](https://so.toutiao.com/search?keyword=美国撤出2万亿对印度经济有何影响)
 1. [女小生走红：老公不是性别而是感觉](https://so.toutiao.com/search?keyword=女小生走红：老公不是性别而是感觉)
+1. [冯德莱恩：将带着诚意访华](https://so.toutiao.com/search?keyword=冯德莱恩：将带着诚意访华)
+1. [国务院任免国家工作人员](https://so.toutiao.com/search?keyword=国务院任免国家工作人员)
 1. [消炎药是抗生素？大不相同](https://so.toutiao.com/search?keyword=消炎药是抗生素？大不相同)
 1. [小伙公交车上拉大便 公交公司回应](https://so.toutiao.com/search?keyword=小伙公交车上拉大便+公交公司回应)
-1. [国务院任免国家工作人员](https://so.toutiao.com/search?keyword=国务院任免国家工作人员)
+1. [五菱星光开启预订 预售9.38万起](https://so.toutiao.com/search?keyword=五菱星光开启预订+预售9.38万起)
 1. [蔡国庆披斗篷重游什刹海](https://so.toutiao.com/search?keyword=蔡国庆披斗篷重游什刹海)
-1. [生态环境部刘志全被查](https://so.toutiao.com/search?keyword=生态环境部刘志全被查)
-1. [油价有望迎来大跌](https://so.toutiao.com/search?keyword=油价有望迎来大跌)
-1. [《再见李可乐》闫妮暴打偷狗贼](https://so.toutiao.com/search?keyword=《再见李可乐》闫妮暴打偷狗贼)
-1. [老年痴呆症正在悄悄年轻化](https://so.toutiao.com/search?keyword=老年痴呆症正在悄悄年轻化)
-1. [哪些国家还没缴清联合国会费](https://so.toutiao.com/search?keyword=哪些国家还没缴清联合国会费)
+1. [白宫：“绝对欢迎”大熊猫重返美国](https://so.toutiao.com/search?keyword=白宫：“绝对欢迎”大熊猫重返美国)
 1. [爸爸肺癌去世后两个女儿也查出肺癌](https://so.toutiao.com/search?keyword=爸爸肺癌去世后两个女儿也查出肺癌)
+1. [油价有望迎来大跌](https://so.toutiao.com/search?keyword=油价有望迎来大跌)
+1. [老鼠爬上桌主人惊慌呼叫自家猫咪](https://so.toutiao.com/search?keyword=老鼠爬上桌主人惊慌呼叫自家猫咪)
+1. [老年痴呆症正在悄悄年轻化](https://so.toutiao.com/search?keyword=老年痴呆症正在悄悄年轻化)
+1. [新款奔驰GLS亮相广州车展](https://so.toutiao.com/search?keyword=新款奔驰GLS亮相广州车展)
 1. [牛弹琴：缅北这一招中国干得漂亮](https://so.toutiao.com/search?keyword=牛弹琴：缅北这一招中国干得漂亮)
 1. [卡桑旅称对在耶路撒冷枪杀以军负责](https://so.toutiao.com/search?keyword=卡桑旅称对在耶路撒冷枪杀以军负责)
 1. [医生举报科室为拿回扣用贵40倍注射液](https://so.toutiao.com/search?keyword=医生举报科室为拿回扣用贵40倍注射液)
 1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
-1. [联合国吁在加沙开放第二个边境口岸](https://so.toutiao.com/search?keyword=联合国吁在加沙开放第二个边境口岸)
-1. [新款奔驰GLS亮相广州车展](https://so.toutiao.com/search?keyword=新款奔驰GLS亮相广州车展)
+1. [当兵几年都有什么变化](https://so.toutiao.com/search?keyword=当兵几年都有什么变化)
+1. [女儿被罚站听到爸爸开门破防哭了](https://so.toutiao.com/search?keyword=女儿被罚站听到爸爸开门破防哭了)
 1. [马航MH370事件即将开庭 家属回应](https://so.toutiao.com/search?keyword=马航MH370事件即将开庭+家属回应)
-1. [韦世豪被换下怒气冲冲](https://so.toutiao.com/search?keyword=韦世豪被换下怒气冲冲)
+1. [外卖小哥撞坏保时捷受伤担心赔不起](https://so.toutiao.com/search?keyword=外卖小哥撞坏保时捷受伤担心赔不起)
 1. [“东北大花”：土到极致就是潮吗](https://so.toutiao.com/search?keyword=“东北大花”：土到极致就是潮吗)
-1. [五菱星光开启预订 预售9.38万起](https://so.toutiao.com/search?keyword=五菱星光开启预订+预售9.38万起)
+1. [校方回应天不亮学生站操场背书](https://so.toutiao.com/search?keyword=校方回应天不亮学生站操场背书)
 1. [年度最让人心疼的夫妇](https://so.toutiao.com/search?keyword=年度最让人心疼的夫妇)
-1. [巴方：加沙所有医院均已停止服务](https://so.toutiao.com/search?keyword=巴方：加沙所有医院均已停止服务)
-1. [老鼠爬上桌主人惊慌呼叫自家猫咪](https://so.toutiao.com/search?keyword=老鼠爬上桌主人惊慌呼叫自家猫咪)
+1. [生态环境部刘志全被查](https://so.toutiao.com/search?keyword=生态环境部刘志全被查)
+1. [克扣学生报酬责任人被捕？官方回应](https://so.toutiao.com/search?keyword=克扣学生报酬责任人被捕？官方回应)
 1. [警方调查农户4千只鸭子集体死亡](https://so.toutiao.com/search?keyword=警方调查农户4千只鸭子集体死亡)
-1. [女童幼儿园遭男童猥亵？警方辟谣](https://so.toutiao.com/search?keyword=女童幼儿园遭男童猥亵？警方辟谣)
+1. [明星被“挂厕所”“开盒”得到整治](https://so.toutiao.com/search?keyword=明星被“挂厕所”“开盒”得到整治)
+1. [嘉凯城及3名高管被深交所通报批评](https://so.toutiao.com/search?keyword=嘉凯城及3名高管被深交所通报批评)
+1. [哪些国家还没缴清联合国会费](https://so.toutiao.com/search?keyword=哪些国家还没缴清联合国会费)
+1. [《斗破苍穹》首部电影上线](https://so.toutiao.com/search?keyword=《斗破苍穹》首部电影上线)
+1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
+1. [河南新乡教育局专项招46名在编教师](https://so.toutiao.com/search?keyword=河南新乡教育局专项招46名在编教师)
+1. [国美计划三年开1万家超市](https://so.toutiao.com/search?keyword=国美计划三年开1万家超市)
 1. [刘亦菲于适同框生图](https://so.toutiao.com/search?keyword=刘亦菲于适同框生图)
 1. [外媒：特朗普将是全世界最大的威胁](https://so.toutiao.com/search?keyword=外媒：特朗普将是全世界最大的威胁)
-1. [校方回应天不亮学生站操场背书](https://so.toutiao.com/search?keyword=校方回应天不亮学生站操场背书)
+1. [中国连续6个月减持美债](https://so.toutiao.com/search?keyword=中国连续6个月减持美债)
+1. [新乡教育局回应招聘46名在编教师](https://so.toutiao.com/search?keyword=新乡教育局回应招聘46名在编教师)
+1. [广州车展那些消失的车企和品牌](https://so.toutiao.com/search?keyword=广州车展那些消失的车企和品牌)
+1. [埃弗顿因财政违规被扣除10个积分](https://so.toutiao.com/search?keyword=埃弗顿因财政违规被扣除10个积分)
+1. [阿里为何要把一切“翻篇归零”](https://so.toutiao.com/search?keyword=阿里为何要把一切“翻篇归零”)
+1. [国足延续66年世预赛首战不败纪录](https://so.toutiao.com/search?keyword=国足延续66年世预赛首战不败纪录)
+1. [日本首相提及台湾问题 外交部回应](https://so.toutiao.com/search?keyword=日本首相提及台湾问题+外交部回应)
+1. [国足打进反超球时泰国场上只有10人](https://so.toutiao.com/search?keyword=国足打进反超球时泰国场上只有10人)
+1. [贪官美容腐败有多疯狂](https://so.toutiao.com/search?keyword=贪官美容腐败有多疯狂)
+1. [《再见李可乐》闫妮暴打偷狗贼](https://so.toutiao.com/search?keyword=《再见李可乐》闫妮暴打偷狗贼)
+1. [联合国吁在加沙开放第二个边境口岸](https://so.toutiao.com/search?keyword=联合国吁在加沙开放第二个边境口岸)
+1. [韦世豪被换下怒气冲冲](https://so.toutiao.com/search?keyword=韦世豪被换下怒气冲冲)
+1. [巴方：加沙所有医院均已停止服务](https://so.toutiao.com/search?keyword=巴方：加沙所有医院均已停止服务)
+1. [女童幼儿园遭男童猥亵？警方辟谣](https://so.toutiao.com/search?keyword=女童幼儿园遭男童猥亵？警方辟谣)
 1. [哈马斯指挥中心在加沙医院吗](https://so.toutiao.com/search?keyword=哈马斯指挥中心在加沙医院吗)
 1. [巴克莱：预计明年全球股市跑赢债市](https://so.toutiao.com/search?keyword=巴克莱：预计明年全球股市跑赢债市)
-1. [《斗破苍穹》首部电影上线](https://so.toutiao.com/search?keyword=《斗破苍穹》首部电影上线)
 1. [终于明白了皮肤的重要性](https://so.toutiao.com/search?keyword=终于明白了皮肤的重要性)
-1. [阿里为何要把一切“翻篇归零”](https://so.toutiao.com/search?keyword=阿里为何要把一切“翻篇归零”)
-1. [外卖小哥撞坏保时捷受伤担心赔不起](https://so.toutiao.com/search?keyword=外卖小哥撞坏保时捷受伤担心赔不起)
 1. [以色列被土耳其告上国际法院](https://so.toutiao.com/search?keyword=以色列被土耳其告上国际法院)
 1. [联合国人权高专：须问责战争罪行](https://so.toutiao.com/search?keyword=联合国人权高专：须问责战争罪行)
-1. [河南新乡教育局专项招46名在编教师](https://so.toutiao.com/search?keyword=河南新乡教育局专项招46名在编教师)
 1. [全新宝马5系亮相广州车展](https://so.toutiao.com/search?keyword=全新宝马5系亮相广州车展)
-1. [中国连续6个月减持美债](https://so.toutiao.com/search?keyword=中国连续6个月减持美债)
-1. [日本首相提及台湾问题 外交部回应](https://so.toutiao.com/search?keyword=日本首相提及台湾问题+外交部回应)
 1. [胡锡进评缅北明家覆灭：虽远必诛](https://so.toutiao.com/search?keyword=胡锡进评缅北明家覆灭：虽远必诛)
 1. [专家谈歼-10C跨越7000公里奔赴迪拜](https://so.toutiao.com/search?keyword=专家谈歼-10C跨越7000公里奔赴迪拜)
 1. [全国警察赶赴中缅边境押送嫌犯](https://so.toutiao.com/search?keyword=全国警察赶赴中缅边境押送嫌犯)
-1. [大货车过磅正常女收费员称目测超重](https://so.toutiao.com/search?keyword=大货车过磅正常女收费员称目测超重)
 1. [缅武装誓言铲除电诈中心 中方回应](https://so.toutiao.com/search?keyword=缅武装誓言铲除电诈中心+中方回应)
 1. [校运会开幕式老师方阵出场时赢麻了](https://so.toutiao.com/search?keyword=校运会开幕式老师方阵出场时赢麻了)
 1. [伊朗圣城旅宣称不惜代价支持哈马斯](https://so.toutiao.com/search?keyword=伊朗圣城旅宣称不惜代价支持哈马斯)
@@ -74,7 +86,6 @@
 1. [专访《斗破苍穹·觉醒》导演赵小丁](https://so.toutiao.com/search?keyword=专访《斗破苍穹·觉醒》导演赵小丁)
 1. [挪议会要求政府准备承认巴勒斯坦国](https://so.toutiao.com/search?keyword=挪议会要求政府准备承认巴勒斯坦国)
 1. [东方雨虹40多亿抢来地块计划卖47万](https://so.toutiao.com/search?keyword=东方雨虹40多亿抢来地块计划卖47万)
-1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
 1. [三部门：加快房地产金融供给侧改革](https://so.toutiao.com/search?keyword=三部门：加快房地产金融供给侧改革)
 1. [直击海军护卫舰编队实战化训练](https://so.toutiao.com/search?keyword=直击海军护卫舰编队实战化训练)
 1. [五位新晋茅奖作家谈创作](https://so.toutiao.com/search?keyword=五位新晋茅奖作家谈创作)
@@ -83,21 +94,17 @@
 1. [专家谈粮食问题的源头](https://so.toutiao.com/search?keyword=专家谈粮食问题的源头)
 1. [美将向菲律宾出口核技术 中方回应](https://so.toutiao.com/search?keyword=美将向菲律宾出口核技术+中方回应)
 1. [丰田世极SUV亮相](https://so.toutiao.com/search?keyword=丰田世极SUV亮相)
-1. [国足延续66年世预赛首战不败纪录](https://so.toutiao.com/search?keyword=国足延续66年世预赛首战不败纪录)
 1. [5位茅奖作家乌镇签书签到手酸](https://so.toutiao.com/search?keyword=5位茅奖作家乌镇签书签到手酸)
 1. [蔚来员工爆料为保工作买蔚来仍被裁](https://so.toutiao.com/search?keyword=蔚来员工爆料为保工作买蔚来仍被裁)
 1. [阿来称《小王子》比所有童话都伟大](https://so.toutiao.com/search?keyword=阿来称《小王子》比所有童话都伟大)
 1. [菲律宾一名新当选议员在商店遭枪杀](https://so.toutiao.com/search?keyword=菲律宾一名新当选议员在商店遭枪杀)
-1. [女儿被罚站听到爸爸开门破防哭了](https://so.toutiao.com/search?keyword=女儿被罚站听到爸爸开门破防哭了)
 1. [美国男子沙漠迷路吃蝌蚪充饥终获救](https://so.toutiao.com/search?keyword=美国男子沙漠迷路吃蝌蚪充饥终获救)
 1. [贝尔萨：击败阿根廷并不能带来什么](https://so.toutiao.com/search?keyword=贝尔萨：击败阿根廷并不能带来什么)
 1. [iCAR 03在广州车展开启盲订](https://so.toutiao.com/search?keyword=iCAR+03在广州车展开启盲订)
-1. [国美计划三年开1万家超市](https://so.toutiao.com/search?keyword=国美计划三年开1万家超市)
 1. [武磊反击单挑对手可惜体能耗尽](https://so.toutiao.com/search?keyword=武磊反击单挑对手可惜体能耗尽)
 1. [极氪007广州车展开启预售](https://so.toutiao.com/search?keyword=极氪007广州车展开启预售)
 1. [黄健翔：韦世豪你要好好踢球](https://so.toutiao.com/search?keyword=黄健翔：韦世豪你要好好踢球)
 1. [王自如加入格力两年半干得如何](https://so.toutiao.com/search?keyword=王自如加入格力两年半干得如何)
 1. [多款重磅新能源MPV亮相广州车展](https://so.toutiao.com/search?keyword=多款重磅新能源MPV亮相广州车展)
-1. [广州车展那些消失的车企和品牌](https://so.toutiao.com/search?keyword=广州车展那些消失的车企和品牌)
 1. [城管与冬泳者起冲突双方均有人落水](https://so.toutiao.com/search?keyword=城管与冬泳者起冲突双方均有人落水)
 <!-- END TOUTIAO -->
