--- a/archives/toutiao-search/2023-11-18.md
+++ b/archives/toutiao-search/2023-11-18.md
@@ -1,54 +1,76 @@
 # 2023-11-18
 
-共 201 条
+共 222 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 18 2023 13:00:49 GMT+0800 (China Standard Time) -->
-1. [西昌市委原书记李俊夫妇贪腐细节](https://so.toutiao.com/search?keyword=西昌市委原书记李俊夫妇贪腐细节)
+<!-- 最后更新时间 Sat Nov 18 2023 14:00:58 GMT+0800 (China Standard Time) -->
+1. [大学教师非法购买农村宅基地被强执](https://so.toutiao.com/search?keyword=大学教师非法购买农村宅基地被强执)
 1. [台名嘴评拜登称赞红旗车并探头细看](https://so.toutiao.com/search?keyword=台名嘴评拜登称赞红旗车并探头细看)
 1. [推动亚太合作再出发](https://so.toutiao.com/search?keyword=推动亚太合作再出发)
-1. [银行疯抢“个人养老金”](https://so.toutiao.com/search?keyword=银行疯抢“个人养老金”)
-1. [台湾“蓝白合”正副手人选结果未定](https://so.toutiao.com/search?keyword=台湾“蓝白合”正副手人选结果未定)
+1. [女孩突发高热惊厥护士“跨栏”飞奔](https://so.toutiao.com/search?keyword=女孩突发高热惊厥护士“跨栏”飞奔)
+1. [坦克700 Hi4-T预售价70万](https://so.toutiao.com/search?keyword=坦克700+Hi4-T预售价70万)
 1. [余承东：智界问界后还有2个“界”](https://so.toutiao.com/search?keyword=余承东：智界问界后还有2个“界”)
 1. [马云办公室回应减持1000万股股票](https://so.toutiao.com/search?keyword=马云办公室回应减持1000万股股票)
-1. [特斯拉投资者痛批马斯克不配当CEO](https://so.toutiao.com/search?keyword=特斯拉投资者痛批马斯克不配当CEO)
+1. [哈登生涯助攻数超越托尼·帕克](https://so.toutiao.com/search?keyword=哈登生涯助攻数超越托尼·帕克)
 1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
-1. [腾势D9创始版亮相：四座布局](https://so.toutiao.com/search?keyword=腾势D9创始版亮相：四座布局)
+1. [银行疯抢“个人养老金”](https://so.toutiao.com/search?keyword=银行疯抢“个人养老金”)
 1. [宝马车主扬言回局里说话？警方辟谣](https://so.toutiao.com/search?keyword=宝马车主扬言回局里说话？警方辟谣)
 1. [明学昌大儿子截瘫未被通缉](https://so.toutiao.com/search?keyword=明学昌大儿子截瘫未被通缉)
 1. [本轮巴以冲突致双方超1.34万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突致双方超1.34万人死亡)
-1. [电影《劫数难逃》上线](https://so.toutiao.com/search?keyword=电影《劫数难逃》上线)
 1. [73岁港星回应为电诈头目祝寿](https://so.toutiao.com/search?keyword=73岁港星回应为电诈头目祝寿)
+1. [电影《劫数难逃》上线](https://so.toutiao.com/search?keyword=电影《劫数难逃》上线)
 1. [羽生结弦离婚原因](https://so.toutiao.com/search?keyword=羽生结弦离婚原因)
 1. [女小生走红：老公不是性别而是感觉](https://so.toutiao.com/search?keyword=女小生走红：老公不是性别而是感觉)
 1. [蔡国庆披斗篷重游什刹海](https://so.toutiao.com/search?keyword=蔡国庆披斗篷重游什刹海)
-1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
-1. [小伙公交车上拉大便 公交公司回应](https://so.toutiao.com/search?keyword=小伙公交车上拉大便+公交公司回应)
-1. [卡桑旅称对在耶路撒冷枪杀以军负责](https://so.toutiao.com/search?keyword=卡桑旅称对在耶路撒冷枪杀以军负责)
+1. [詹姆斯35+5+9 湖人轻取开拓者](https://so.toutiao.com/search?keyword=詹姆斯35+5+9+湖人轻取开拓者)
+1. [公交公司回应小伙车上拉大便](https://so.toutiao.com/search?keyword=公交公司回应小伙车上拉大便)
+1. [美国犹太裔众议员呼吁巴以停火](https://so.toutiao.com/search?keyword=美国犹太裔众议员呼吁巴以停火)
 1. [医生举报科室为拿回扣用贵40倍注射液](https://so.toutiao.com/search?keyword=医生举报科室为拿回扣用贵40倍注射液)
 1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
+1. [以高官敦促以军“烧毁”加沙地带](https://so.toutiao.com/search?keyword=以高官敦促以军“烧毁”加沙地带)
 1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
+1. [ChatGPT之父：中国在AI领域会很出色](https://so.toutiao.com/search?keyword=ChatGPT之父：中国在AI领域会很出色)
+1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
+1. [餐厅被曝用福寿螺做饭？店方回应](https://so.toutiao.com/search?keyword=餐厅被曝用福寿螺做饭？店方回应)
+1. [干饭最积极的猫咪](https://so.toutiao.com/search?keyword=干饭最积极的猫咪)
+1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
+1. [网友夸淄博：热心事数也数不完](https://so.toutiao.com/search?keyword=网友夸淄博：热心事数也数不完)
+1. [iCAR 03亮相2023广州车展](https://so.toutiao.com/search?keyword=iCAR+03亮相2023广州车展)
+1. [卡德罗夫在射击场检验儿子枪法](https://so.toutiao.com/search?keyword=卡德罗夫在射击场检验儿子枪法)
+1. [中国“霸总”爽剧在海外杀疯了](https://so.toutiao.com/search?keyword=中国“霸总”爽剧在海外杀疯了)
+1. [总台记者探访波乌边境](https://so.toutiao.com/search?keyword=总台记者探访波乌边境)
+1. [2岁男童患白血病随时有生命危险](https://so.toutiao.com/search?keyword=2岁男童患白血病随时有生命危险)
+1. [老牌国货羽绒服今年卖疯了](https://so.toutiao.com/search?keyword=老牌国货羽绒服今年卖疯了)
+1. [专家解答糖尿病逆转](https://so.toutiao.com/search?keyword=专家解答糖尿病逆转)
+1. [《宁安如梦》谢危的爱永远拿得出手](https://so.toutiao.com/search?keyword=《宁安如梦》谢危的爱永远拿得出手)
+1. [韩国瑜将列中国国民党不分区民代首位](https://so.toutiao.com/search?keyword=韩国瑜将列中国国民党不分区民代首位)
+1. [奥特曼回应被OpenAI董事会开除](https://so.toutiao.com/search?keyword=奥特曼回应被OpenAI董事会开除)
+1. [美国前总统卡特的妻子接受临终关怀](https://so.toutiao.com/search?keyword=美国前总统卡特的妻子接受临终关怀)
+1. [日本海底火山喷发形成一座新岛屿](https://so.toutiao.com/search?keyword=日本海底火山喷发形成一座新岛屿)
+1. [媒体：网络不是肮脏的“人性厕所”](https://so.toutiao.com/search?keyword=媒体：网络不是肮脏的“人性厕所”)
+1. [澳门旅游局长：游澳门从土生菜开始](https://so.toutiao.com/search?keyword=澳门旅游局长：游澳门从土生菜开始)
+1. [警方调查农户4千只鸭子集体死亡](https://so.toutiao.com/search?keyword=警方调查农户4千只鸭子集体死亡)
+1. [媒体：校园食品安全不容“试错”](https://so.toutiao.com/search?keyword=媒体：校园食品安全不容“试错”)
+1. [利物浦市长：对埃弗顿的处罚过度](https://so.toutiao.com/search?keyword=利物浦市长：对埃弗顿的处罚过度)
+1. [驻华外交官体验非遗福建魅力](https://so.toutiao.com/search?keyword=驻华外交官体验非遗福建魅力)
+1. [女儿被罚站听到爸爸开门破防哭了](https://so.toutiao.com/search?keyword=女儿被罚站听到爸爸开门破防哭了)
+1. [西昌市委原书记李俊夫妇贪腐细节](https://so.toutiao.com/search?keyword=西昌市委原书记李俊夫妇贪腐细节)
+1. [台湾“蓝白合”正副手人选结果未定](https://so.toutiao.com/search?keyword=台湾“蓝白合”正副手人选结果未定)
+1. [特斯拉投资者痛批马斯克不配当CEO](https://so.toutiao.com/search?keyword=特斯拉投资者痛批马斯克不配当CEO)
+1. [腾势D9创始版亮相：四座布局](https://so.toutiao.com/search?keyword=腾势D9创始版亮相：四座布局)
+1. [小伙公交车上拉大便 公交公司回应](https://so.toutiao.com/search?keyword=小伙公交车上拉大便+公交公司回应)
+1. [卡桑旅称对在耶路撒冷枪杀以军负责](https://so.toutiao.com/search?keyword=卡桑旅称对在耶路撒冷枪杀以军负责)
 1. [张杰谢娜带女儿迪士尼玩耍](https://so.toutiao.com/search?keyword=张杰谢娜带女儿迪士尼玩耍)
 1. [外卖小哥撞坏保时捷受伤担心赔不起](https://so.toutiao.com/search?keyword=外卖小哥撞坏保时捷受伤担心赔不起)
 1. [四川芦山再次发现大熊猫等野生动物](https://so.toutiao.com/search?keyword=四川芦山再次发现大熊猫等野生动物)
-1. [专家解答糖尿病逆转](https://so.toutiao.com/search?keyword=专家解答糖尿病逆转)
 1. [国际足球友谊赛贵州开打](https://so.toutiao.com/search?keyword=国际足球友谊赛贵州开打)
 1. [李显龙谈交权为何哽咽](https://so.toutiao.com/search?keyword=李显龙谈交权为何哽咽)
-1. [ChatGPT之父：中国在AI领域会很出色](https://so.toutiao.com/search?keyword=ChatGPT之父：中国在AI领域会很出色)
 1. [哪些国家还没缴清联合国会费](https://so.toutiao.com/search?keyword=哪些国家还没缴清联合国会费)
-1. [餐厅被曝用福寿螺做饭？店方回应](https://so.toutiao.com/search?keyword=餐厅被曝用福寿螺做饭？店方回应)
-1. [中国“霸总”爽剧在海外杀疯了](https://so.toutiao.com/search?keyword=中国“霸总”爽剧在海外杀疯了)
 1. [19辆货车高速飙车时速超140公里](https://so.toutiao.com/search?keyword=19辆货车高速飙车时速超140公里)
-1. [警方调查农户4千只鸭子集体死亡](https://so.toutiao.com/search?keyword=警方调查农户4千只鸭子集体死亡)
-1. [老牌国货羽绒服今年卖疯了](https://so.toutiao.com/search?keyword=老牌国货羽绒服今年卖疯了)
 1. [《新闻女王》有哪些看点](https://so.toutiao.com/search?keyword=《新闻女王》有哪些看点)
 1. [教育部回应汉语拼音“o”读法](https://so.toutiao.com/search?keyword=教育部回应汉语拼音“o”读法)
-1. [女儿被罚站听到爸爸开门破防哭了](https://so.toutiao.com/search?keyword=女儿被罚站听到爸爸开门破防哭了)
-1. [网友夸淄博：热心事数也数不完](https://so.toutiao.com/search?keyword=网友夸淄博：热心事数也数不完)
 1. [山东潍坊人大常委会委员殷修湖被查](https://so.toutiao.com/search?keyword=山东潍坊人大常委会委员殷修湖被查)
-1. [日本海底火山喷发形成一座新岛屿](https://so.toutiao.com/search?keyword=日本海底火山喷发形成一座新岛屿)
 1. [恩比德对阵老鹰拿下32分7板8助](https://so.toutiao.com/search?keyword=恩比德对阵老鹰拿下32分7板8助)
-1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
 1. [揭秘制片主任工资能挣多少](https://so.toutiao.com/search?keyword=揭秘制片主任工资能挣多少)
 1. [世卫：非常担忧疾病在加沙地带蔓延](https://so.toutiao.com/search?keyword=世卫：非常担忧疾病在加沙地带蔓延)
 1. [媒体：巩固电影市场好势头](https://so.toutiao.com/search?keyword=媒体：巩固电影市场好势头)
@@ -73,7 +95,6 @@
 1. [博主评00后穿军大衣：最清醒的一代](https://so.toutiao.com/search?keyword=博主评00后穿军大衣：最清醒的一代)
 1. [OpenAI将在CEO离职后召开员工大会](https://so.toutiao.com/search?keyword=OpenAI将在CEO离职后召开员工大会)
 1. [马斯克被批“支持反犹”牵连X平台](https://so.toutiao.com/search?keyword=马斯克被批“支持反犹”牵连X平台)
-1. [卡德罗夫在射击场检验儿子枪法](https://so.toutiao.com/search?keyword=卡德罗夫在射击场检验儿子枪法)
 1. [库里明日出战雷霆成疑](https://so.toutiao.com/search?keyword=库里明日出战雷霆成疑)
 1. [记者暗访“自选快餐称重”](https://so.toutiao.com/search?keyword=记者暗访“自选快餐称重”)
 1. [演员杜旭东为给电诈头目庆生道歉](https://so.toutiao.com/search?keyword=演员杜旭东为给电诈头目庆生道歉)
